Criado através do Colab

--- a/quickStartGemini.ipynb
+++ b/quickStartGemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwLOJ8+RkvkFtgZa0fgDWS",
+      "authorship_tag": "ABX9TyP+74kjMcQIBNtSy4KQEKn8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,12 +127,12 @@
       "cell_type": "code",
       "source": [
         "#gemini-pro-vision: Modelo de ponta do Gemini, que combinam todas as capacidades avançadas das versões anteriores, incluindo multimodais (texto e imagem), memória a curto prazo e desempenho aprimorado de texto.\n",
-        "model = genai.GenerativeModel('gemini-pro')"
+        "model = genai.GenerativeModel('gemini-1.0-pro')"
       ],
       "metadata": {
         "id": "gho3ltNIU6ZQ"
       },
-      "execution_count": 13,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -159,8 +159,8 @@
       "cell_type": "code",
       "source": [
         "generation_config = {\n",
-        "    \"candidate_count\": 1,\n",
-        "    \"temperature\": 0.5\n",
+        "    \"candidate_count\": 1, #alternativas de respostas\n",
+        "    \"temperature\": 0.5 #aleatoridade das palavras quanto maior mais \"criativo\"\n",
         "}\n",
         "safety_settings = {\n",
         "    \"HARASSMENT\": \"BLOCK_NONE\",\n",
@@ -172,20 +172,20 @@
       "metadata": {
         "id": "WJrVn46EaNqf"
       },
-      "execution_count": 14,
+      "execution_count": 68,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model = genai.GenerativeModel(model_name='gemini-pro',\n",
+        "model = genai.GenerativeModel(model_name='gemini-1.0-pro',\n",
         "                                  generation_config=generation_config,\n",
         "                                  safety_settings=safety_settings,)"
       ],
       "metadata": {
         "id": "Ju7WXRGacTtQ"
       },
-      "execution_count": 16,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -200,42 +200,72 @@
     {
       "cell_type": "code",
       "source": [
-        "response = model.generate_content('conte até 10 em Japones, e gere o simbolo')\n",
+        "response = model.generate_content('conte até 10 em Japones, e gere o kanji')\n",
         "print(response.text)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 295
+          "height": 225
         },
         "id": "-yiDjd8Gcm8a",
-        "outputId": "6306afbf-46b9-4860-d8b1-f69ef5b09ce8"
+        "outputId": "cf3514fd-787c-4ba3-990f-21edb5b0cc94"
       },
-      "execution_count": 21,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "**Números de 1 a 10 em japonês:**\n",
+            "**Contagem em Japonês**\n",
             "\n",
-            "1. 一 (ichi)\n",
-            "2. 二 (ni)\n",
-            "3. 三 (san)\n",
-            "4. 四 (shi)\n",
-            "5. 五 (go)\n",
-            "6. 六 (roku)\n",
-            "7. 七 (nana)\n",
-            "8. 八 (hachi)\n",
-            "9. 九 (kyū)\n",
-            "10. 十 (jū)\n",
-            "\n",
-            "**Símbolo japonês para \"número\":**\n",
-            "\n",
-            "数 (かず)\n"
+            "1. Ichi (一)\n",
+            "2. Ni (二)\n",
+            "3. San (三)\n",
+            "4. Shi (四)\n",
+            "5. Go (五)\n",
+            "6. Roku (六)\n",
+            "7. Nana (七)\n",
+            "8. Hachi (八)\n",
+            "9. Kyū (九)\n",
+            "10. Jū (十)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = model.generate_content('conte uma hitoria de 5 linhas')\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "h4hNXL10pzwt",
+        "outputId": "68911139-3f49-49bc-adf4-132ac583e167"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Em uma floresta escura, um jovem caçador seguiu um veado até um claro. Lá, ele encontrou uma bela princesa presa em uma torre. O caçador escalou a torre e a libertou, e juntos eles fugiram para a liberdade. No entanto, a bruxa malvada que havia aprisionado a princesa os perseguiu, mas o caçador e a princesa conseguiram escapar, vivendo felizes para sempre.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Iniciando um chat bot**"
+      ],
+      "metadata": {
+        "id": "jzqqlTbrffMM"
+      }
     }
   ]
 }
