Criado através do Colab

--- a/quickStartGemini.ipynb
+++ b/quickStartGemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+74kjMcQIBNtSy4KQEKn8",
+      "authorship_tag": "ABX9TyPdcvvyIFolGRQYHq+3rNon",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -266,6 +266,56 @@
       "metadata": {
         "id": "jzqqlTbrffMM"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = model.generate_content('conte uma hitoria de 5 linhas')\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "W2hOhW8zrshN",
+        "outputId": "f023c177-1fa4-4b8d-ecd6-4ed73340690f"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Em uma noite escura e tempestuosa, um viajante solitário se abrigou em uma cabana abandonada. Enquanto se aquecia junto à lareira, ele ouviu um uivo arrepiante do lado de fora. De repente, a porta se abriu com força e uma figura sombria entrou, seus olhos vermelhos brilhando na escuridão.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = model.generate_content('conte uma hitoria de 5 linhas')\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "BqqMt67wrzBG",
+        "outputId": "10d71962-0d5f-42cd-ee62-0c3a4144c3d1"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No coração de uma floresta sombria, uma jovem chamada Anya se perdeu. Enquanto vagava desesperada, ela tropeçou em uma cabana abandonada. Lá dentro, encontrou um livro antigo que contava a história de um tesouro escondido. Animada, Anya seguiu as pistas do livro, levando-a a um baú enterrado sob um carvalho centenário. Dentro, ela descobriu não apenas ouro e joias, mas também uma paz que havia perdido há muito tempo.\n"
+          ]
+        }
+      ]
     }
   ]
 }
