Criado através do Colab

--- a/quickStartGemini.ipynb
+++ b/quickStartGemini.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdcvvyIFolGRQYHq+3rNon",
+      "authorship_tag": "ABX9TyPPADnuhaNU2akfFAYPxRBZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +236,7 @@
     {
       "cell_type": "code",
       "source": [
-        "response = model.generate_content('conte uma hitoria de 5 linhas')\n",
+        "response = model.generate_content('conte uma hitoria de 5 linhas!!')\n",
         "print(response.text)"
       ],
       "metadata": {
@@ -245,15 +245,15 @@
           "height": 54
         },
         "id": "h4hNXL10pzwt",
-        "outputId": "68911139-3f49-49bc-adf4-132ac583e167"
+        "outputId": "06be4388-4124-487a-eefb-fe92fa3fe97f"
       },
-      "execution_count": 75,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Em uma floresta escura, um jovem caçador seguiu um veado até um claro. Lá, ele encontrou uma bela princesa presa em uma torre. O caçador escalou a torre e a libertou, e juntos eles fugiram para a liberdade. No entanto, a bruxa malvada que havia aprisionado a princesa os perseguiu, mas o caçador e a princesa conseguiram escapar, vivendo felizes para sempre.\n"
+            "Em meio à floresta sombria, um jovem caçador se perdeu. Ele vagou por dias, faminto e desesperado. Quando a esperança estava se esvaindo, ele avistou uma luz tênue. Seguindo-a, ele encontrou uma cabana aconchegante, onde uma velha sábia o acolheu e o alimentou. Com a ajuda da sábia, o caçador encontrou seu caminho de volta para casa, para sempre grato pela bondade que havia recebido.\n"
           ]
         }
       ]
@@ -270,24 +270,52 @@
     {
       "cell_type": "code",
       "source": [
-        "response = model.generate_content('conte uma hitoria de 5 linhas')\n",
-        "print(response.text)"
+        "chat = model.start_chat(history=[])\n"
+      ],
+      "metadata": {
+        "id": "6EP-muBStXKr"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prompt = input('esperando input: ')\n",
+        "# enquanto\n",
+        "while prompt != 'fim':\n",
+        "    response = chat.send_message(prompt)\n",
+        "    print('resposta: ', response.text, '\\n')\n",
+        "\n",
+        "    prompt = input('esperando input: ')\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 243
         },
-        "id": "W2hOhW8zrshN",
-        "outputId": "f023c177-1fa4-4b8d-ecd6-4ed73340690f"
+        "id": "tSqAbtwKuEp6",
+        "outputId": "6ac539e8-f66c-4f7e-e1ea-b9011d276e8e"
       },
-      "execution_count": 76,
+      "execution_count": 93,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Em uma noite escura e tempestuosa, um viajante solitário se abrigou em uma cabana abandonada. Enquanto se aquecia junto à lareira, ele ouviu um uivo arrepiante do lado de fora. De repente, a porta se abriu com força e uma figura sombria entrou, seus olhos vermelhos brilhando na escuridão.\n"
+            "esperando input: qual a capital da frança\n",
+            "resposta:  Paris \n",
+            "\n",
+            "esperando input: o meu primo nasceu nessa cidade, qual a nacionalidade?\n",
+            "resposta:  Francesa \n",
+            "\n",
+            "esperando input: qual o veiculo mais comum?\n",
+            "resposta:  Automóvel \n",
+            "\n",
+            "esperando input: qual ponto turístico mais visitado?\n",
+            "resposta:  Torre Eiffel \n",
+            "\n",
+            "esperando input: fim\n"
           ]
         }
       ]
@@ -295,27 +323,83 @@
     {
       "cell_type": "code",
       "source": [
-        "response = model.generate_content('conte uma hitoria de 5 linhas')\n",
-        "print(response.text)"
+        "chat.history"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "BqqMt67wrzBG",
-        "outputId": "10d71962-0d5f-42cd-ee62-0c3a4144c3d1"
+        "id": "BXer7iZluwTA",
+        "outputId": "00117dcb-5942-49f9-e568-81b3fcd60658"
       },
-      "execution_count": 77,
+      "execution_count": 94,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "No coração de uma floresta sombria, uma jovem chamada Anya se perdeu. Enquanto vagava desesperada, ela tropeçou em uma cabana abandonada. Lá dentro, encontrou um livro antigo que contava a história de um tesouro escondido. Animada, Anya seguiu as pistas do livro, levando-a a um baú enterrado sob um carvalho centenário. Dentro, ela descobriu não apenas ouro e joias, mas também uma paz que havia perdido há muito tempo.\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[parts {\n",
+              "   text: \"qual a capital da fran\\303\\247a\"\n",
+              " }\n",
+              " role: \"user\",\n",
+              " parts {\n",
+              "   text: \"Paris\"\n",
+              " }\n",
+              " role: \"model\",\n",
+              " parts {\n",
+              "   text: \"o meu primo nasceu nessa cidade, qual a nacionalidade?\"\n",
+              " }\n",
+              " role: \"user\",\n",
+              " parts {\n",
+              "   text: \"Francesa\"\n",
+              " }\n",
+              " role: \"model\",\n",
+              " parts {\n",
+              "   text: \"qual o veiculo mais comum?\"\n",
+              " }\n",
+              " role: \"user\",\n",
+              " parts {\n",
+              "   text: \"Autom\\303\\263vel\"\n",
+              " }\n",
+              " role: \"model\",\n",
+              " parts {\n",
+              "   text: \"qual ponto tur\\303\\255stico mais visitado?\"\n",
+              " }\n",
+              " role: \"user\",\n",
+              " parts {\n",
+              "   text: \"Torre Eiffel\"\n",
+              " }\n",
+              " role: \"model\"]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Melhorando a visualização\n",
+        "#Código disponível em https://ai.google.dev/tutorials/python_quickstart#import_packages\n",
+        "import textwrap\n",
+        "from IPython.display import display\n",
+        "from IPython.display import Markdown\n",
+        "\n",
+        "def to_markdown(text):\n",
+        "  text = text.replace(':', '::')\n",
+        "  return Markdown(textwrap.indent(text, '  ', predicate=lambda _: True))\n",
+        "\n",
+        "#Imprimindo o histórico\n",
+        "for message in chat_history:\n",
+        "  display(to_markdown(f'**{message.role}**: {message.parts[0].text}'))\n",
+        "  print()"
+      ],
+      "metadata": {
+        "id": "tXa68CKZyTBP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
